<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#629568"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#1B5E20"
        android:backgroundTint="#1B5E20"
        android:ellipsize="end"
        android:fontFamily="@font/candal"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/tip_calculator"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textColorLink="#1B5E20"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/bill_amount_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:drawableStart="@drawable/ic_store"
        android:drawablePadding="10dp"
        android:hint="@string/bill_amount"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColorHint="#212121"
        android:textSize="18sp"
        tools:ignore="Autofill" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:paddingTop="16dp"
        android:text="@string/how_was_the_service"
        android:textColor="#212121"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/ic_service" />

    <RadioGroup
        android:id="@+id/tip_options_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/amazing_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_30" />

        <RadioButton
            android:id="@+id/good_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_20" />

        <RadioButton
            android:id="@+id/ok_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_10" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/round_up_tip"
            android:textColor="#212121"
            android:textSize="16sp"
            app:drawableLeftCompat="@drawable/ic_round_up" />

        <Switch
            android:id="@+id/round_up_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="160dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="12dp"
            android:thumbTint="#121212"
            android:trackTint="#141313"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/calculate"
        android:textColor="#EDECEC"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="143dp"
        android:layout_height="34dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_button"
        tools:text="Tip amount: $10" />

</LinearLayout>
